rectified issue of missing social media logos on index.html,  also the oversize images making the viewport too wide, increased the size of the video

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -400,7 +400,7 @@ h4 {
     
     background: #5a3859;
     color: whitesmoke;
-    padding: 6px 31px;
+    padding: 6px 7px;
     align-self: center;
     margin-bottom: 26px;
     margin-top: 26px;
@@ -428,6 +428,18 @@ h4 {
 }
 .videos {
     align-self: center;
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%;
+    height: 100%;
+}
+
+.videos iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .images {
@@ -438,7 +450,7 @@ h4 {
 }
 
 .images img{
-    max-width: 278px;
+    max-width: 241px;
     height: auto;
     align-self: center;
 }
